<resources>
    <string name="app_name">Constraint Colors</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="btn_red">RED</string>
    <string name="btn_yellow">YELLOW</string>
    <string name="btn_green">GREEN</string>
    <string name="how_to_play">How to Play</string>
    <string name="touch_The_Boxes">Touch the Boxes</string>
</resources>